--- a/app/globals.css
+++ b/app/globals.css
@@ -108,4 +108,10 @@ body {
     position: -webkit-sticky;
     position: sticky;
   }
+  .hover-underline-lr {
+    @apply inline-block relative after:content-[""] after:absolute after:w-full after:h-[1px] after:bg-current after:origin-bottom-right after:transition-transform after:duration-300 after:ease-in-out after:scale-x-0 after:left-0 after:bottom-0 hover:after:origin-bottom-left hover:after:scale-x-100;
+  }
+  .hover-link {
+    @apply no-underline inline-block relative after:content-[''] after:block after:h-0.5 after:absolute after:w-0 after:bg-current after:left-2/4 after:-bottom-1 after:transition-all after:duration-300 hover:after:w-full hover:after:left-0 active:after:w-full active:after:left-0;
+  }
 }
